Bug 118281 - Form control information for Text Box use 'cm' for units, not units as selected in other dialogs.
Summary: Form control information for Text Box use 'cm' for units, not units as select...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
5.2 all versions
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.2.0 target:6.1.1
Keywords:
Depends on:
Blocks: Measurement-Units
  Show dependency treegraph
 
Reported: 2018-06-20 21:20 UTC by Michael Tiernan
Modified: 2018-08-16 06:41 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Collection of screenshots. (6.68 MB, application/pdf)
2018-06-22 18:25 UTC, Michael Tiernan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Tiernan 2018-06-20 21:20:29 UTC
Description:
When I open the "Controls" "Properties: Text Box" for a text box, the measurements for Position X, Position Y, Width, and Height are measured in 'cm' when all other aspects of the document are set for Inches.

Yes, I don't doubt in the slightest that I might have missed a setting but I don't believe this is the case. The "Properties" sidebar showing the position in inches not cm.

I'm choosing the component of LibreOffice because I can't tell where the report belongs.

I've searched and not found any other like this. If I missed it, I'm sorry.

Steps to Reproduce:
1. Create drawing document.
2. Insert a text field.
3. Right click on text field and choose "Control"

Actual Results:
Measurements in Metric.

Expected Results:
Measurements are based on a central setting.


Reproducible: Always


User Profile Reset: No



Additional Info:
If this is a duplicate, my apologies.
If someone's interested, I can try to record my screen showing the sequence to reproduce.
Comment 1 Alex Thurgood 2018-06-22 06:58:10 UTC
@Michael : could you provide your locale, and any language pack that you might have installed for LO ?

I'm assuming we need someone with a US or CA system locale (or some such) to test this ?
Comment 2 Alex Thurgood 2018-06-22 07:00:05 UTC
When you say that you expect a "central setting to be respected", I assume that you mean a "central setting from within LO" ?
Comment 3 Michael Tiernan 2018-06-22 18:24:14 UTC
(In reply to Alex Thurgood from comment #2)
> When you say that you expect a "central setting to be respected", I assume
> that you mean a "central setting from within LO" ?

Sorry. Yes, in essence.

The rulers on the page and the units shown by the 'position and size' dialog (or sidebar) are in inches but this dialog box seems to ignore (sorry, most accurate word here) any settings that tell LO to use a different unit of measure.

I assume (*cough*) that LO is is either using specific units based on OS reported location, or LO assumes location standards based on it's internal settings, or some other mechanism.

I cannot say for certain that /my/ settings are fully (or correctly) configured but all indications are that LO should be aware that a different measurement unit should be in force.

================================================

I have gone through a sequence of screenshots and tried to show the reasoning that I'm following.

Attached is a PDF showing all the screens involved. I started with the version information and then the settings.

Next I created a blank document and showed the settings associated with that doc. Now I create a text box and a text field and show the settings for them.

The last two screenshots are my going back and creating the text field and showing all the measuremnts in the control screen.

================================================

I'm going to download the new version of the beta and make sure it behaves the same.
Comment 4 Michael Tiernan 2018-06-22 18:25:47 UTC
Created attachment 143052 [details]
Collection of screenshots.

Thank you to everyone for their time!
Comment 5 Akshya Kumar 2018-06-26 07:33:19 UTC Comment hidden (obsolete)
Comment 6 Buovjaga 2018-06-26 17:55:36 UTC
When I have inches in the options, I see inches in the Properties. I do see cms in the Slant & corner radius. I wonder how we could activate the control point fields? I did some searches, but did not find anything.

Arch Linux 64-bit
Version: 6.2.0.0.alpha0+
Build ID: eff395c2d2a3026d9d65121e273af336fb0cfb19
CPU threads: 8; OS: Linux 4.17; UI render: default; VCL: gtk3; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group threaded
Built on June 26th 2018
Comment 7 Alex Thurgood 2018-08-06 07:50:27 UTC
Confirming with 

Version: 6.0.5.2
Build ID: 54c8cbb85f300ac59db32fe8a675ff7683cd5a16
CPU threads: 4; OS: Mac OS X 10.13.6; UI render: default; 
Locale: en-US (fr_FR.UTF-8); Calc: group


In the Slant & Control Radius tab of the textbox properties, I see the units given in cm instead of inches.
Comment 8 Alex Thurgood 2018-08-06 08:03:17 UTC
I should add that I proceeded as follows:

1) Open a new Draw document
2) Press Fn-F2 to insert a nex text object.
3) Select the object and check the properties of the Slant & Corner Radius tab.



In a comparative test :
1) Open a new Draw document
2) Activate the Form toolbar
3) Add a Text object control
4) Select the object and the check the properties via the Control menu.
5) Under the General tab, the positions are displayed in cm.
6) Under Position & Size, Slant & Corner radius, the positions are displayed in cm
Comment 9 Xisco Faulí 2018-08-07 17:43:58 UTC
Also reproduced in Writer

Version: 6.2.0.0.alpha0+
Build ID: c86a47a9d3debbc7e8ee6247f573e7f98c611f19
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group threaded
Comment 10 Xisco Faulí 2018-08-07 17:53:19 UTC
The .UI dialog is in https://opengrok.libreoffice.org/xref/core/cui/uiconfig/ui/slantcornertabpage.ui and the hardcoded 'cm' were deleted in https://cgit.freedesktop.org/libreoffice/core/commit/cui/uiconfig/ui/slantcornertabpage.ui?id=b93348cd30df08ae60f38fce3efdd3823b674d44, however, they're still shown in the UI.

@Caolán, One for you ?
Comment 11 Caolán McNamara 2018-08-08 08:27:51 UTC
looks an easy fix, bug seems to precede my changes to the dialogs
Comment 12 Commit Notification 2018-08-08 12:30:45 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=98e2b6de4741c672e4249119c7619aa9cbffef85

Resolves: tdf#118281 control positions always in cm

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2018-08-08 18:39:11 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=18a8285433ec2f94d0ca523af8dd769ff46fd5a1&h=libreoffice-6-1

Resolves: tdf#118281 control positions always in cm

It will be available in 6.1.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.