Resolves: tdf#118281 control positions always in cm

Change-Id: I7803f673e835bd4575616d4e4b465ca144e282c8
Reviewed-on: https://gerrit.libreoffice.org/58727
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>